<resources>
    <string name="app_name">The Food Coast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_name">Meal Name</string>
    <string name="area">Area</string>
    <string name="home">Home</string>
    <string name="like_eat">What would you like to eat</string>
    <string name="over_popular">Most Popular Meal</string>
    <string name="category">Category</string>
    <string name="sea_food">Seafood</string>
    <string name="total_meal">Total Dishes = %1$s</string>

    <string name="instruction">Instruction</string>

</resources>